--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod --aot"
+    "e2e": "ng e2e"
+//    "heroku-postbuild": "ng build --prod --aot"
   },
   "private": true,
   "dependencies": {
